--- a/ui2.html
+++ b/ui2.html
@@ -96,7 +96,7 @@
 
 
 
-
+<!-- 
                     <div class="container">
 
                       <div class="dropdown">
@@ -108,7 +108,7 @@
                           <a class="dropdown-item" href="#">Link 3</a>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
 
 
