--- a/ui2.html
+++ b/ui2.html
@@ -128,8 +128,11 @@
           <textarea id="userInput" placeholder="" class="usrInput"></textarea>
                           <div id="sendButton"><i class="fa fa-paper-plane" style="font-size:20px;margin-left:10px;margin-top:4.1px;"aria-hidden="true"></i></div>
 
-                           <div id="mike-btn" class="mike"style=" box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 10px 0 #00000096;
-                            border-radius: 50px;
+                           <div id="mike-btn" class="mike"style="  border: 2px solid red;
+                             padding: 5px;
+                             border-radius: 25px;
+                             margin-right: -10px;
+                             margin-top: -2px;
                             ">
                                <i class="fa fa-microphone" style="font-size:23px;color:darkblue;margin-top:6px;"></i></div>
           <!--                <input type=button id="mike-btn" style="right:60px;height:30px;width:20px"> <i class="fa fa-microphone" aria-hidden="true" style="font-size:24px;color:red;position:absolute;float:right;right: 60px;top: 10px;" svg height="15" viewBox="0 0 512 512" ></i></input>-->
