--- a/ui2.html
+++ b/ui2.html
@@ -194,9 +194,9 @@
 
           <div class="profile_div" id="profile_div">
               <img class="imgProfile"  src="https://media1.tenor.com/images/4a25b0e0380a2d5ae6b69cc18c284c3a/tenor.gif?itemid=10123191" alt="description of gif" />
-              <!-- <div id="icon">
+              <div id="icon">
                 <div id="not"></div>
-              </div> -->
+              </div>
           </div>
 
 
