--- a/ui2.html
+++ b/ui2.html
@@ -122,7 +122,7 @@
             <!--Chatbot contents goes here -->
             <!--Background Image tag -->
             <li class="log col-xs-12 power">
-                                    <span class="col-xs-4 col-xs-offset-4 powered-by"><a href="" target="_blank" class="ui-link"><b>Chatbot</b> ⚡ <b>VirtiBot</b></a>
+                                    <span class="col-xs-4 col-xs-offset-4 powered-by"><a href="" target="_blank" class="ui-link"><b>Chatbot</b> ⚡ <b>Cloudstrats</b></a>
                                     </span>
                                 </li>
 
